--- a/scr/views/blog.ejs
+++ b/scr/views/blog.ejs
@@ -3,27 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/public/style.css">
-    <link rel="stylesheet" href="/public/bootstrap.css">
-    <link rel="stylesheet" href="/public/bootstrap.js">
+    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/bootstrap.css">
     <title>Blog: <%= post.titulo_post %> </title>
 </head>
 <body>
-    <h1><%= post.titulo_post %></h1>
-    <div style="width: 50%;">
-        <img src="<%= post.link %>" alt="<%= post.titulo_post %>">
+    <div class="container">
+        <h1><%= post.titulo_post %></h1>
+        <div class="row">
+            <div class="col-md-8">
+                <img src="<%= post.link %>" alt="<%= post.titulo_post %>" class="img-fluid">
+            </div>
+            <div class="col-md-4">
+                <p><%= post.contenido %></p>
+                <span>Creado: <%= post.createdAt %></span>
+                <span>Última Modificación: <%= post.updatedAt %></span>
+                <form method="GET" action="/editar/<%= post.id %>">
+                    <button type="submit" class="btn btn-primary">Editar</button>
+                </form>
+                <form method="POST" action="/eliminar/<%= post.id %>">
+                    <button type="submit" class="btn btn-danger">Eliminar</button>
+                </form>
+                <form action="/" method="GET">
+                    <button type="submit" class="btn btn-secondary">Volver al inicio</button>
+                </form>
+            </div>
+        </div>
     </div>
-    <p><%= post.contenido %></p>
-    <span>Creado:<%= post.createdAt</span>
-    <span>Ultima Modificacion: <%= post.updatedAt</span>
-    <form method="GET" action="/editar/<%= post.id %>">
-        <button type="submit">Editar</button>
-    </form>
-    <form method="POST" action="/eliminar/<%= post.id %>">
-        <button type="submit">Eliminar</button>
-    </form>
-    <form action="/" method="GET">
-        <button type="submit">Volver al inicio</button>
-    </form>
+    
+    <script src="/bootstrap.js"></script>
 </body>
 </html>
