--- a/scr/views/crear.ejs
+++ b/scr/views/crear.ejs
@@ -3,24 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/public/style.css">
-    <link rel="stylesheet" href="/public/bootstrap.css">
-    <link rel="stylesheet" href="/public/bootstrap.js">
+    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/bootstrap.css">
     <title>Crear Nuevo </title>
 </head>
 <body>
-    <h1>Crear Nuevo Blog</h1>
-    <form method="POST" action="/crear">
-        <label for="titulo">Título:</label>
-        <input type="text" placeholder="titulo_blog" name="titulo_post">
-        <label for="contenido">Contenido:</label>
-        <textarea placeholder="Contenido" name="contenido"></textarea>
-        <label for="link">link Image:</label>
-        <input type="text" name="link">
-        <button type="submit">GUARDAR</button>
-    </form>
-    <form method="GET" action="/">
-        <button type="submit">Volver al inicio</button>
-    </form>
+    <div class="container">
+        <h1>Crear Nuevo Blog</h1>
+        <form method="POST" action="/crear">
+            <div class="mb-3">
+                <label for="titulo" class="form-label">Título:</label>
+                <input type="text" class="form-control" placeholder="Título del blog" name="titulo_post">
+            </div>
+            <div class="mb-3">
+                <label for="contenido" class="form-label">Contenido:</label>
+                <textarea class="form-control" placeholder="Contenido" name="contenido"></textarea>
+            </div>
+            <div class="mb-3">
+                <label for="link" class="form-label">Enlace de la Imagen:</label>
+                <input type="text" class="form-control" name="link">
+            </div>
+            <button type="submit" class="btn btn-primary">GUARDAR</button>
+        </form>
+        <form method="GET" action="/">
+            <button type="submit" class="btn btn-secondary">Volver al inicio</button>
+        </form>
+    </div>
+    <script src="/bootstrap.js"></script>
 </body>
 </html>
