--- a/scr/views/index.ejs
+++ b/scr/views/index.ejs
@@ -3,29 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/public/style.css">
-    <link rel="stylesheet" href="/public/bootstrap.css">
-    <link rel="stylesheet" href="/public/bootstrap.js">
+    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/bootstrap.css">
 
     <title>Mis Blog </title>
 </head>
 <body>
-    <h1>Mis Blogs</h1>
-    <ul>
-        <% posts.forEach(post => { %>
-            <li>
-                <h2><a href="/blog/<%= post.id %>"><%= post.titulo_post %></a></h2>
-                <form method="GET" action="/editar/<%= post.id %>">
-                    <button type="submit">Editar</button>
-                </form>
-                <form method="GET" action="/eliminar/<%= post.id %>">
-                    <button type="submit">Eliminar</button>
-                </form>
+    <div class="container">
+        <h1>Mis Blogs</h1>
+        <ul class="list-group">
+          <% posts.forEach(post => { %>
+            <li class="list-group-item">
+              <div class="row">
+                <div class="col-8">
+                  <h2><a href="/blog/<%= post.id %>"><%= post.titulo_post %></a></h2>
+                </div>
+                <div class="col-2">
+                  <form method="GET" action="/editar/<%= post.id %>">
+                    <button type="submit" class="btn btn-primary">Editar</button>
+                  </form>
+                </div>
+                <div class="col-2">
+                  <form method="GET" action="/eliminar/<%= post.id %>">
+                    <button type="submit" class="btn btn-danger">Eliminar</button>
+                  </form>
+                </div>
+              </div>
             </li>
-        <% }); %>
-    </ul>
-    <form action="/crear" method="GET">
-        <button type="submit">Crear nuevo blog</button>
-      </form>
+          <% }); %>
+        </ul>
+        <form action="/crear" method="GET">
+          <button type="submit" class="btn btn-success">Crear</button>
+        </form>
+      </div>
+      
+    <script src="/bootstrap.js"></script>
 </body>
 </html>
