--- a/scr/views/eliminar.ejs
+++ b/scr/views/eliminar.ejs
@@ -10,14 +10,17 @@
 </head>
 <body>
     <div class="container">
-        <h1>Confirmar Eliminación</h1>
-        <p>¿Estás seguro de que deseas eliminar el blog "<%= post.titulo_post %>"?</p>
-        <form method="POST" action="/eliminar/<%= post.id %>">
-            <button type="submit" class="btn btn-danger">Eliminar</button>
-        </form>
-        <form method="GET" action="/blog/<%= post.id %>">
-            <button type="submit" class="btn btn-secondary">Cancelar</button>
-        </form>
+        <h1 class="titulos-todos">Confirmar Eliminación</h1>
+        <p class="mensaje-eliminar">¿Estás seguro de que deseas eliminar el blog <%= post.titulo_post %> ?</p>
+        <div class="d-flex">
+            <form method="post" action="/post/eliminar/<%= post.id %>">
+                <button type="submit" class="btn btn-danger mx-2">Eliminar</button>
+            </form>
+            
+            <form action="/post" method="get">
+                <button type="submit" class="btn btn-secondary mx-2">Cancelar</button>
+            </form>
+        </div>
     </div>
     <script src="/bootstrap.js"></script>
 </body>
